[package]
name = "raiden-raw-shred-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
ctrlc = "3.4"
colored = "2"
tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
blake3 = "1"
hex = "0.4"
url = "2"